welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:4: error: value !== is not a member of Int
    if (lookingFor!==nums(i)){
                  ^indexOfValue:6: error: value !== is not a member of Int
    } else if (lookingFor!==nums(i)){
                         ^